# pychronicles

./: .env_example  README.md  docker-compose.yaml
.github/workflows/: accounts_docker.yaml  accounts_ruff.yaml  accounts_test.yaml  blog_docker.yaml  blog_ruff.yaml  blog_tests.yaml  website_docker.yaml  website_ruff.yaml  website_tests.yaml
accounts/: .env_example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
accounts/accounts/: asgi.py  settings.py  urls.py  wsgi.py
blog/: .env_example  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
blog/blog/: settings.py  urls.py
blog/core/: models.py
blog/static/css/: style.css
blog/templates/: blog_page.html  home_page.html  wagtail_base.html
blog/tests/: conftest.py  test_two.py  test_views.py
nginx/: nginx.conf
website/: .env_example  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
website/templates/: base.html  index.html
website/templates/includes/: socials.html
website/tests/: test_three.py  test_views.py
website/website/: settings.py  urls.py
