[project]
name = "blog"
version = "0.1.0"
description = "A blog built using Django and Wagtail"
authors = [
    {name = "Anna Makarudze",email = "amakarudze@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (==5.2.8)",
    "python-dotenv (==1.2.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "wagtail (==7.2)",
    "ruff (>=0.14.4,<0.15.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "wagtail-headless-preview (>=0.8.0,<0.9.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]

[dependency-groups]
dev = [
    "pytest (==9.0.0)",
    "coverage (==7.11.2)",
    "pytest-cov (==7.0.0)",
    "pytest-dotenv (==0.5.2)",
    "pytest-django (==4.11.1)",
    "selenium (==4.36.0)",
    "pytest-selenium (==4.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
