[project]
name = "website"
version = "0.1.0"
description = "Personal Website"
authors = [
    {name = "Anna Makarudze",email = "anna@djangogirls.org"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.2.8)",
    "python-dotenv (==1.2.1)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "coverage (>=7.11.2,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-dotenv (>=0.5.2,<0.6.0)",
    "pytest-selenium (>=4.1.0,<5.0.0)"
]
